[gd_scene load_steps=2 format=3 uid="uid://h5u4d3s2c1n0"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hud")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MessageLabel" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "GOAL!!"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "RETRY"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RESUME"

[node name="TitleButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "TITLE"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT GAME"

[node name="LivesLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "LIFE: 5"

[connection signal="pressed" from="Overlay/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
